<resources>
    <string name="app_name">HiTani</string>
    <string name="hitani">HiTani</string>
    <string name="welcome">Welcome</string>
    <string name="deteksi">Deteksi</string>
    <string name="welcome_desc">Ketahui penyakit tanaman anda hanya dengan ambil gambar daunnya</string>
    <string name="start">Mulai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rice">Padi</string>
    <string name="corn">Jagung</string>
    <string name="textDesc">Selamat Datang Di HiTani</string>
    <string name="deskripsi">HiTani adalah aplikasi untuk membantu mendeteksi penyakit pada daun tanaman jagung dan padi</string>
    <string name="btnStart">Mulai Deteksi</string>
    <string name="add">Tambah</string>
    <string name="title">Title</string>
    <string name="penyakit">Penyakit</string>
    <string name="date">Date</string>
    <string name="upload">Upload</string>
    <string name="padi">PADI</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="batal">Batal</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="hasil_diagnosa">Hasil Diagnosa</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In faucibus, lacus suscipit scelerisque aliquam, ex mi ornare nibh, nec blandit dolor nisl sed felis. Proin tincidunt tortor quis blandit accumsan. Aliquam faucibus sollicitudin lorem ac sodales. Aenean commodo tincidunt sagittis. Vivamus bibendum tempor eros eget consectetur. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean suscipit ac ligula non malesuada. Praesent sed convallis diam</string>
    <string name="back">Kembali</string>
    <string name="hapus">Hapus</string>
    <string name="simpan">Simpan</string>
    <string name="judul">Judul</string>
    <string name="judul_laporan">Judul Laporan</string>
    <string name="jagung">Jagung</string>
    <string name="setting">Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="register">Registrasi</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="password">Password</string>
    <string name="password_confir">Ulangi Password</string>
    <string name="desc">Apakah anda telah memiliki akun ? Silahkan klik</string>
    <string name="here">disini</string>
    <string name="error">Pastikan Password yang dimasukkan sama!</string>
    <string name="login">MASUK</string>
    <string name="login_text">Masuk</string>
    <string name="password_empty">Masukkan Password</string>
    <string name="password_error">Password harus lebih dari 6 karakter</string>
    <string name="failed">Format Email atau Password anda salah</string>
    <string name="email_empty">Masukkan Email</string>
    <string name="email_error">Format Email Anda Salah</string>
    <string name="input_empty">Mohon di isi bagian ini</string>
</resources>