<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".login.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="680dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" >

        <com.capstone.capstone.customview.EditEmailText
            android:id="@+id/email_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:drawablePadding="10dp"/>

        <com.capstone.capstone.customview.EditPasswordText
            android:id="@+id/password_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:drawablePadding="10dp"/>

        <com.capstone.capstone.customview.LoginButton
            android:id="@+id/button_login"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:ems="5"/>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textAlignment="center"
            android:layout_marginStart="30dp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="360dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout2" >

        <TextView
            android:id="@+id/desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textColor="@color/white"
            android:layout_marginStart="35dp"/>

        <TextView
            android:id="@+id/here_login"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/here"
            android:textColor="@color/blue"
            android:textStyle="bold"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_Bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>