<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15sp"
    android:id="@+id/rowPlant">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPlant"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/roundImageView"/>

    <TextView
        android:id="@+id/plantTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@id/ivPlant"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/plantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/penyakit"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/plantTitle"
        app:layout_constraintStart_toEndOf="@id/ivPlant"/>

    <TextView
        android:id="@+id/plantDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/date"
        app:layout_constraintTop_toBottomOf="@id/plantName"
        app:layout_constraintStart_toEndOf="@id/ivPlant"/>

</androidx.constraintlayout.widget.ConstraintLayout>