<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".jagung.ChooseJagungFragment">

    <ImageView
        android:id="@+id/ivJagung"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:src="@drawable/jagung_bg"
        tools:ignore="gambar padi" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jagung"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/ivJagung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.widget.Button
        android:id="@+id/btnUpload"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_fitur"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <android.widget.Button
        android:id="@+id/btnCamera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ambil_foto"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_fitur"
        app:layout_constraintTop_toBottomOf="@id/btnUpload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/diagnosis"
        android:layout_width="400dp"
        android:layout_height="450dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/btnChoose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundImageView"/>

    <LinearLayout
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@id/diagnosis"
        app:layout_constraintTop_toBottomOf="@id/diagnosis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.widget.Button
            android:id="@+id/btnBatal"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@drawable/button_cancel"
            android:layout_marginTop="32dp"/>

        <android.widget.Space
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:layout_marginTop="32dp"/>

        <android.widget.Button
            android:id="@+id/btnBack"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/diagnosa"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_fitur"
            android:layout_marginTop="32dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>